# skills

./: .gitignore  404.html  CLAUDE.md  README.md  format.sh  index.html  package.json  pyproject.toml  search.json  sitemap.xml  zensical.toml
.agents/workflows/: add-skill.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: init-app-stack
.github/workflows/: docs.yml  release.yml  update-readme.yml  version-bump.yml
coding/autoresearch/: index.html
coding/fastapi/: index.html
coding/init-app-stack/: index.html
coding/postgres/: index.html
coding/python/: index.html
coding/tanstack/: index.html
coding/typescript/: index.html
databricks/cli/: index.html
databricks/spark-connect/: index.html
docs/: how-it-works.md  index.md  installation.md
docs/assets/: extra.css
docs/coding/: autoresearch.md  fastapi.md  init-app-stack.md  postgres.md  python.md  tanstack.md  typescript.md
docs/databricks/: cli.md  spark-connect.md
docs/reference/: hooks.md  marketplace.md
docs/ui/: kendo-react.md
docs/writing/: deslop.md  scientific.md
hooks/: bun-mapper.py  databricks-mapper.py  uv-mapper.py
installation/: index.html
reference/hooks/: index.html
reference/marketplace/: index.html
scripts/: check_skills.py  find_python.ps1  find_python.sh  update_readme.py  validate-skills.mjs
skill-check/: check.ts  package.json
skills/: plugin.json
skills/add-skill/: SKILL.md
skills/aiochannel-python/: SKILL.md
skills/autoresearch/: SKILL.md
skills/bms/: SKILL.md
skills/codeunit-analyzer/: SKILL.md  analyze.py
(+220 files in other folders)
