[project]
name = "skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.261",
    "pytest>=8,<9",
]
format = [
    "autoflake >=2.3.1,<3",
    "deptry>=0.23.1",
    "isort >=5.13.2,<6",
    "pycln >=2.4.0,<3",
    "ruff >=0.4.3",
    "shandy-sqlfmt >=0.23.2",
    "yamlfix >=1.14.0",
]

[tool.pyright]
venv = ".venv"
venvPath = "."
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = [
    "**/node_modules", 
    "**/__pycache__",
    ".*",
    ".venv",
]
reportMissingImports = false
reportMissingModuleSource = false

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.yamlfix]
line_length = 119

[tool.sqlfmt]
line_length = 119

[tool.pycln]
all = false

[tool.autoflake]
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
expand-star-imports = true
exclude = ["_init__.py"]

[tool.uv]
native-tls = true
keyring-provider = "subprocess"
